# Vecraft

./: Cargo.toml  README.md  hcu2.rs  memory.x  openocd-flash.cfg  openocd.cfg  openocd.gdb
.cargo/: config.toml
.github/workflows/: rust.yml
hcu/: Cargo.toml
hcu/src/: main.rs
m-ecu/: Cargo.toml
m-ecu/src/: main.rs  protocol.rs
mt-ecu/: Cargo.toml
mt-ecu/src/: main.rs
v-ecu/: Cargo.toml
v-ecu/src/: main.rs
vecraft/: Cargo.toml
vecraft/src/: can.rs  config.rs  console.rs  eeprom.rs  led.rs  lib.rs  lsgc.rs  lsgc2.rs  state.rs  usb_avic.rs  usb_frame.rs
