[package]
name = "hcu"
version = "0.4.9"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
systick-monotonic = "1.0"
cortex-m-rtic = { version = "1.1.4" }
stm32h7xx-hal = { version = "0.15.1", features = ["stm32h743v", "rt", "can"] }
fdcan = { version = "0.2.0", features = ["fdcan_h7"] }
vecraft = { version = "0.1.0", path = "../vecraft" }

[[bin]]
name = "hcu"
test = false
bench = false
