[package]
name = "v-ecu"
version = "0.4.5"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
systick-monotonic = "1.0"
cortex-m-rtic = { version = "1.1.4" }
stm32h7xx-hal = { version = "0.16", features = ["stm32h743v", "rt", "can", "usb_hs"] }
fdcan = { version = "0.2", features = ["fdcan_h7"] }
vecraft = { version = "0.2.0", path = "../vecraft" }
usb-device = "0.2.9"

[[bin]]
name = "v-ecu"
test = false
bench = false
